fix bug - title in the slider is shifted up after zooming

--- a/src/app/components/home-page/performance-slider/performance-slider.component.scss
+++ b/src/app/components/home-page/performance-slider/performance-slider.component.scss
@@ -240,10 +240,6 @@ gallery {
     width: 1000px;
   }
 
-  .performance-title {
-    bottom: 250px;
-  }
-
   .no-performance__image {
     width: 1000px;
   }
